--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <!-- Hero Section -->
   <section class="flex flex-col items-center text-center py-20 bg-gradient-to-r from-blue-100 to-purple-100">
-    <img src="https://via.placeholder.com/150" alt="Profile" class="w-40 h-40 rounded-full border-4 border-white shadow-lg mb-6">
+    <img src="2919906.png" alt="Profile" class="w-40 h-40 rounded-full border-4 border-white shadow-lg mb-6">
     <h2 class="text-4xl font-bold">John Doe</h2>
     <p class="text-lg mt-3 max-w-xl">Machine Learning Engineer passionate about building scalable AI solutions in NLP, Computer Vision, and Deep Learning.</p>
     <div class="mt-6 space-x-4">
