--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
       <a href="https://linkedin.com/" class="px-4 py-2 bg-blue-700 text-white rounded-lg shadow hover:bg-blue-800">LinkedIn</a>
     </div>
   </section>
+  
+  <script async type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script>
+  <zapier-interfaces-chatbot-embed is-popup='true' chatbot-id='cmeyb12wk004cho61fhczn8mi'></zapier-interfaces-chatbot-embed>
 
   <!-- About Section -->
   <section id="about" class="max-w-4xl mx-auto py-16 px-6">
